<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/password_insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/password_insert"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/guideline68"
        app:layout_constraintEnd_toStartOf="@+id/guideline64"
        app:layout_constraintHorizontal_bias="0.553"
        app:layout_constraintStart_toStartOf="@+id/guideline64"
        app:layout_constraintTop_toBottomOf="@+id/name_insert"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/name_insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/name_insert"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/guideline64"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/guideline64"
        app:layout_constraintTop_toTopOf="@+id/guideline67" />

    <ImageButton
        android:id="@+id/back_login"
        android:layout_width="77dp"
        android:layout_height="74dp"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintBottom_toTopOf="@+id/guideline63"
        app:layout_constraintEnd_toStartOf="@+id/guideline65"
        app:layout_constraintStart_toStartOf="@+id/guideline65"
        app:layout_constraintTop_toTopOf="@+id/guideline63"
        app:srcCompat="@drawable/back_setting"
        android:contentDescription="@string/back_login" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="153dp"
        android:layout_height="41dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline63"
        app:layout_constraintEnd_toStartOf="@+id/guideline64"
        app:layout_constraintStart_toStartOf="@+id/guideline64"
        app:layout_constraintTop_toTopOf="@+id/guideline63"
        app:srcCompat="@drawable/login_loginpic"
        android:contentDescription="@string/login_pic" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline63"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.09" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline64"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.12" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="222dp"
        android:layout_height="144dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline66"
        app:layout_constraintEnd_toStartOf="@+id/guideline64"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toStartOf="@+id/guideline64"
        app:layout_constraintTop_toTopOf="@+id/guideline66"
        app:srcCompat="@drawable/pic_login"
        android:contentDescription="@string/middle_pic_login" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.27086183" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline67"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.39" />

    <ImageButton
        android:id="@+id/mylogin"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="131dp"
        android:layout_height="105dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/login"
        app:layout_constraintEnd_toStartOf="@+id/guideline64"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="@+id/guideline64"
        app:layout_constraintTop_toTopOf="@+id/guideline68"
        app:srcCompat="@drawable/login" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline68"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.64" />

    <Button
        android:id="@+id/new_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintEnd_toStartOf="@+id/guideline64"
        app:layout_constraintStart_toStartOf="@+id/guideline64"
        app:layout_constraintTop_toBottomOf="@+id/mylogin" />

    <ImageButton
        android:id="@+id/wechat_login"
        android:layout_width="95dp"
        android:layout_height="64dp"
        android:scaleType="fitCenter"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintBottom_toTopOf="@+id/guideline69"
        app:layout_constraintEnd_toStartOf="@+id/guideline70"
        app:layout_constraintStart_toStartOf="@+id/guideline70"
        app:layout_constraintTop_toTopOf="@+id/guideline69"
        app:srcCompat="@drawable/wechat"
        android:contentDescription="@string/wechat_login" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline69"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.91792065" />

    <ImageButton
        android:id="@+id/facebook_login"
        android:layout_width="78dp"
        android:layout_height="60dp"
        android:scaleType="fitCenter"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintBottom_toTopOf="@+id/guideline69"
        app:layout_constraintEnd_toStartOf="@+id/guideline71"
        app:layout_constraintStart_toStartOf="@+id/guideline71"
        app:layout_constraintTop_toTopOf="@+id/guideline69"
        app:srcCompat="@drawable/facebook"
        android:contentDescription="@string/facebook_login" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2189781" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline71"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.77858883" />


</androidx.constraintlayout.widget.ConstraintLayout>