<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_report">

    <ImageView
        android:id="@+id/imageView33"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/background"
        android:contentDescription="@string/pic_report" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline91"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline92"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ImageButton
        android:id="@+id/back_report"
        android:layout_width="74dp"
        android:layout_height="59dp"
        android:scaleType="fitCenter"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintBottom_toTopOf="@+id/guideline91"
        app:layout_constraintEnd_toStartOf="@+id/guideline93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline91"
        app:srcCompat="@drawable/back_white"
        android:contentDescription="@string/back_report" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline93"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.18" />

    <ImageView
        android:id="@+id/imageView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline91"
        app:layout_constraintEnd_toStartOf="@+id/guideline92"
        app:layout_constraintStart_toStartOf="@+id/guideline92"
        app:layout_constraintTop_toTopOf="@+id/guideline91"
        app:srcCompat="@drawable/my_report"
        android:contentDescription="@string/title_report" />

    <ImageView
        android:id="@+id/imageView34"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline95"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline94"
        app:srcCompat="@drawable/pic_report"
        android:contentDescription="@string/background_report" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline94"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.17" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline96"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.94"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/download_report"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="81dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline92"
        app:layout_constraintTop_toTopOf="@+id/guideline95"
        app:srcCompat="@drawable/save"
        android:contentDescription="@string/download_report" />

    <ImageButton
        android:id="@+id/share_report"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="71dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/download_report"
        app:layout_constraintTop_toTopOf="@+id/guideline95"
        app:srcCompat="@drawable/share"
        android:contentDescription="@string/share_report" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="240dp"
        android:layout_height="424dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/text_report"
        app:layout_constraintBottom_toTopOf="@+id/guideline97"
        app:layout_constraintEnd_toStartOf="@+id/guideline92"
        app:layout_constraintStart_toStartOf="@+id/guideline92"
        app:layout_constraintTop_toTopOf="@+id/guideline97" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline97"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5403557" />

</androidx.constraintlayout.widget.ConstraintLayout>